Fixed missing background image

--- a/frontend/css/index.css
+++ b/frontend/css/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-	background-image: url("../img/bg.png");
+	background-image: url("./../img/bg.png");
 }
 
 .navbar {
